--- a/indx.html
+++ b/indx.html
@@ -7,9 +7,40 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+    
 
-   
+    <div class="wrapper">
+        <div class="container-header">
+            <header>
+                <div class="Logo">
+                    <h2>Landscape</h2>
+                </div>
+
+                <div class="container-search">
+                    <form class="search">
+                        <input type="search" placeholder="Procurar">
+                        <button type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="18"
+                         height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search" ><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg></button>
+                    </form>
+                </div>
+
+                <div class="container-notif">
+
+                    <div class="notif like-notif">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-heart"><path d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z"/></svg>
+                    </div>
+                    <div class="notif alert-notif">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-bell"><path d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"/><path d="M10.3 21a1.94 1.94 0 0 0 3.4 0"/></svg>
+                    </div>
+
+                    <div class="notif login-notif">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-user-round"><circle cx="12" cy="8" r="5"/><path d="M20 21a8 8 0 0 0-16 0"/></svg>
+                    </div>
+
+                </div>
+            </header>
+        </div>
+    </div>
 
 
     <script src="./js/main.js"></script>
