--- a/indx.html
+++ b/indx.html
@@ -40,6 +40,20 @@
                 </div>
             </header>
         </div>
+
+        <div class="container-banner">
+            <div class="banner">
+                <div class="banner-content">
+                    <h3>Explore o Mundo Através das<br/> Paisagens</h3>
+
+                    <p>Deixe-se levar por uma coleção de paisagens que capturam<br/> a essência dos lugares mais belos do mundo.</p>
+
+                    <a href="">
+                        <h4>Explorar</h4>
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
 
 
